--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -30,5 +30,7 @@
     "stakeAll": "Stake All",
     "leaderboard": "Leaderboard",
     "textBox": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.",
-    "topBid": "Top Bid"
+    "topBid": "Top Bid",
+    "address": "Address",
+    "earned": "Earned"
 }
