fix text, ui whitelist

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -15,21 +15,23 @@
     "currentPrice": "Current Price",
     "stakingStats": "STAKING STATS",
     "earnPerDay": "earn per day",
-    "yourWarEarned": "Your $WAR earned",
+    "yourWarEarned": "Your $WARS earned",
     "stealed": "stealed",
     "humanStealed": "Human Stealed",
     "nftStaked": "NFT Stake Count",
     "nonStake": "Non Stake Count",
     "humanStaked": "Human Staked",
     "monsterStaked": "Monster Staked",
-    "warClaimed": "$WAR Claimed",
+    "warClaimed": "$WARS Claimed",
     "mcap": "M.CAP",
     "staking": "Staking",
     "nonStaking": "Non Staking",
     "unstakeAll": "Unstake All",
     "stakeAll": "Stake All",
     "leaderboard": "Leaderboard",
-    "textBox": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s.",
+    "textBox1": "Mint and Open Genesis Box to join the ",
+    "textBox2": "5,000 supply total for the genesis mint, with 90% chance of getting a human and 10% chance of getting a monster",
+    "textBox3": "Good luck Soldier!",
     "topBid": "Top Bid",
     "address": "Address",
     "earned": "Earned",
