favicon, text home, link social

--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -6,7 +6,11 @@
     "connect": "Connect",
     "wallet": "Wallet",
     "wrongNetwork": "Wrong Network",
-    "homeText": "Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book",
+    "homeText1": "The first ever P2E game on Blast L2.",
+    "homeText21": "Stake your humans to yield ",
+    "homeText22": ", and strengthen your force.",
+    "homeText3": "Fight monsters, expect a couple of sacrifices.",
+    "homeText4": "May the greatest warrior, triumph over the rest.",
     "titleBox": "Genesis Box",
     "placeBids": "Place your Bids",
     "nameHero": "Hero: Abiss Light",
