--- a/src/languages/en.json
+++ b/src/languages/en.json
@@ -46,8 +46,8 @@
     "claim": "Claim",
     "claimError": "Claim error",
     "claimSuccess": "Claim successful",
-    "commitError": "Commit error",
-    "commitSuccess": "Commit successful",
+    "commitError": "Mint error",
+    "commitSuccess": "Mint successful",
     "approveError": "Approve error",
     "approveSuccess": "Approve successful",
     "stakeError": "Stake error",
